# moldesc

./: .gitignore  pyproject.toml
moldesc/: loader.py
moldesc/data/: rdkit_desc.json
moldesc/descriptors/: pubchemclient.py  rdkitdescriptors.py
moldesc/orca_parser/: parse_output.py
scripts/: compile_data_from_hdf5_second.py  compile_data_to_hdf5.py
tests/: test_orca_descriptors.py  test_orca_parser.py  test_rdkit_descriptor.py
tests/data/: CH4.hess  CH4.out  CH4.xyz  CH4_trj.xyz
